# spring

./: .travis.yml
AI/Skirmish/Incumbent/: CMakeCache.txt
AI/Skirmish/Incumbent/data/: AIInfo.lua
AI/Skirmish/Incumbent/src/: AIExport.cpp  CppTestAI.cpp  Incumbent.cpp  Incumbent.h  Utils.h
AI/Skirmish/Recon/data/: AIInfo.lua
AI/Skirmish/Recon/src/: AIExport.cpp  CppTestAI.cpp  Recon.cpp  Recon.h
AI/Wrappers/Cpp/: CMakeLists.txt
AI/Wrappers/Cpp/src/: AIBase.cpp  AIBase.h  AIFloat4.cpp  AIFloat4.h  AIUtils.h  Utils.h
docker/: Dockerfile  build.sh  down.sh  launch.sh
inttest/: main.cpp
rts/ExternalAI/: AICallback.cpp  AICallback.h  AISCommands.cpp  EngineOutHandler.cpp  EngineOutHandler.h  ObservationData.h  SAIInterfaceCallbackImpl.cpp  SAIInterfaceCallbackImpl.h  SSkirmishAICallbackImpl.cpp  SSkirmishAICallbackImpl.h  SkirmishAIData.cpp  SkirmishAIData.h  SkirmishAILibrary.cpp  SkirmishAIWrapper.cpp  SkirmishAIWrapper.h
rts/ExternalAI/Interface/: AISCommands.h  AISEvents.h  SAIInterfaceCallback.h  SSkirmishAICallback.h
rts/Game/: Game.cpp  UnsyncedGameCommands.cpp
rts/Map/: ReadMap.cpp
rts/Rendering/: DebugColVolDrawer.cpp  UnitDrawer.cpp
rts/Rendering/Map/InfoTexture/Modern/: AirLos.cpp  Radar.cpp  Radar.h
rts/Sim/: CMakeLists.txt
rts/Sim/Misc/: LosHandler.cpp  LosHandler.h  LosMap.cpp  Team.cpp  Team.h  TeamBase.cpp  TeamBase.h  TeamHandler.cpp
rts/Sim/Projectiles/: Projectile.cpp  Projectile.h  ProjectileHandler.cpp
rts/Sim/Units/: Unit.cpp  Unit.h  UnitDef.cpp  UnitDef.h  UnitDefHandler.h
rts/Sim/Units/CommandAI/: Command.h  CommandAI.cpp  CommandAI.h  FactoryCAI.cpp
rts/Sim/Weapons/: Weapon.cpp
rts/System/: SpringApp.cpp  Util.cpp  Util.h  float3.h
rts/System/Net/: CMakeLists.txt
rts/System/Platform/: CpuID.cpp
rts/System/Sound/: CMakeLists.txt
rts/aGui/: CMakeLists.txt
rts/builds/headless/: CMakeLists.txt
rts/lib/assimp/: CMakeLists.txt
rts/lib/gflags/: CMakeLists.txt
rts/lib/luasocket/: CMakeLists.txt
tools/scripts/: travis_before_install.sh  travis_install.sh
